kubernetes/dns/consul-k8s.yml
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: consul-k8s-ingress
  namespace: dns
spec:
  selector:
    matchLabels:
      app: consul-k8s-ingress
  template:
    metadata:
      labels:
        app: consul-k8s-ingress
    spec:
      serviceAccountName: consul-k8s
      restartPolicy: Always
      containers:
        - name: consul-k8s-ingress
          image: "python"
          command:
            - sh
          args:
            - "-c"
            - |
              [...]
