kubernetes/dns/consul.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consul-dns
  namespace: dns
  labels:
    app: consul-dns
spec:
  replicas: 1
  selector:
    matchLabels:
      app: consul-dns
  template:
    metadata:
      labels:
        app: consul-dns
    spec:
      containers:
      - name: consul-dns
        image: consul
        ports:
        - name: serverpc
          containerPort: 8300
          protocol: UDP
        - name: serverlan
          containerPort: 8301
        - name: serverwan
          containerPort: 8302
        - name: webui
          containerPort: 8500
        - name: dns
          containerPort: 8600
          protocol: UDP
        # env:
        #   - name: "CONSUL_BIND_INTERFACE"
        #     value: "eth0"
        args:
          - agent
          - -server
          - -ui
          - -client=0.0.0.0
          - -dns-port=8600
          - -recursor=1.1.1.1
          - -datacenter=rave
          - -bootstrap-expect=1
          - -retry-join="consul-dns"

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: consul-dns
  name: consul-dns
  namespace: dns
spec:
  ports:
  - name: serverrpc
    targetPort: 8300
    port: 8300
    protocol: UDP
  - name: serverlan
    targetPort: 8301
    port: 8301
  - name: serverwan
    targetPort: 8302
    port: 8302
  - name: webui
    targetPort: 8500
    port: 80
  - name: dns
    targetPort: 8600
    port: 53
    protocol: UDP
  selector:
    app: consul-dns
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-dns
  namespace: dns
spec:
  rules:
  - host: consul-dns.bas
    http:
      paths:
      - path: /
        backend:
          serviceName: consul-dns
          servicePort: 80 

---
apiVersion: v1
kind: Service
metadata:
  name: consul-dns-dns-loadbalancer-service
  namespace: dns
spec:
  loadBalancerIP: 192.168.6.90
  type: LoadBalancer
  ports:
    - name: dns
      protocol: UDP
      port: 53
      targetPort: 8600
  selector:
    app: consul-dns

---
apiVersion: v1
kind: Service
metadata:
  name: consul-dns-webui-loadbalancer-service
  namespace: dns
spec:
  loadBalancerIP: 192.168.6.91
  type: LoadBalancer
  ports:
    - name: webui
      protocol: TCP
      targetPort: 8500
      port: 80
  selector:
    app: consul-dns
